added lvl 5 and a main screen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+ <div id="startScreen">
+  <h1>Platform Panic</h1>
+  <button id="playButton">Play</button>
+</div>
+
   <canvas id="game" width="800"   height="400"></canvas>
   <img id="levelCleared" src="level-cleared.avif" style="display:none; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); z-index:10; width:300px;">
   <script src="game.js"></script>
