--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <body>
   
  <div id="startScreen">
-  <h1>Platform Panic</h1>
+  <img src="images/platform-panic-logo.png" alt="Platform Panic Logo" id="gameLogo">
+  <br>
   <button id="playButton">Play</button>
 </div>
+
 
   <canvas id="game" width="800"   height="400"></canvas>
   <img id="levelCleared" src="level-cleared.avif" style="display:none; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); z-index:10; width:300px;">
@@ -21,4 +23,3 @@
 
 </body>
 </html>
-
