--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   
  <div id="startScreen">
-  <img src="images/platform-panic-logo.png" alt="Platform Panic Logo" id="gameLogo">
+  <img src="images/Logo.png" alt="Platform Panic Logo" id="gameLogo">
   <br>
   <button id="playButton">Play</button>
 </div>
