--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
   <canvas id="game" width="800"   height="400"></canvas>
-  <img id="levelCleared" src="level-cleared.avif" style="display:none; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); z-index:10; width:300px;">
+  <img id="levelCleared" src="LevelCleared.png" style="display:none; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); z-index:10; width:300px;">
   <script src="game.js"></script>
 <img id="levelCleared" 
      src="https://upload.wikimedia.org/wikipedia/commons/5/59/Checkmark_green.svg" 
