Fixed Round Screen

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    
     <div class="round-node unlocked" onclick="selectRound(1)">
       <div class="circle">1</div>
-      <p>Training Grounds</p>
+      <p>Robot Factory</p>
       <span class="progress">5/5</span>
     </div>
 
