Made it phone playable

--- a/index.html
+++ b/index.html
@@ -33,7 +33,21 @@
 </div>
 
     
-  
+  <div id="controls" >
+  <button id="leftBtn">◀</button>
+  <button id="rightBtn">▶</button>
+  <button id="jumpBtn">▲</button>
+</div>
+
+
+<div id="controls" style="display:none;">
+  <div class="left-right">
+    <button id="leftBtn">◀<class="arrow left"></button>
+    <button id="rightBtn">▶<class="arrow right"></button>
+  </div>
+  <button id="jumpBtn">▲<class="arrow up"></button>
+</div>
+
 
 
   <canvas id="game" width="800"   height="400"></canvas>
